[gd_scene load_steps=7 format=3 uid="uid://buqjy6d0boxdf"]

[ext_resource type="PackedScene" uid="uid://qnyt438cuwfy" path="res://entities/Homunculus.tscn" id="1_4hvhl"]
[ext_resource type="Script" uid="uid://crwcbve7gceqf" path="res://main/game.gd" id="1_on5i6"]
[ext_resource type="Script" uid="uid://bq2jsxk0a7tar" path="res://main/camera_2d.gd" id="2_34whc"]
[ext_resource type="PackedScene" uid="uid://ef32n52xk2pr" path="res://ui/RessourceUI.tscn" id="3_s7p8s"]
[ext_resource type="PackedScene" uid="uid://caio0o566w3yt" path="res://ui/UpgradeUI.tscn" id="4_6ufn8"]
[ext_resource type="Script" uid="uid://b07apkey3hqce" path="res://main/clicker_timer.gd" id="6_34whc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_on5i6")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_34whc")
zoom_speed = 0.5

[node name="Homunculus" parent="." instance=ExtResource("1_4hvhl")]
position = Vector2(640, 318)
rotation = 0.00268859
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ClickerTimer" type="Timer" parent="."]
wait_time = 5.0
script = ExtResource("6_34whc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="RessourceUi" parent="UI" instance=ExtResource("3_s7p8s")]
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="UpgradeUi" parent="UI" instance=ExtResource("4_6ufn8")]
mouse_filter = 2
metadata/_edit_lock_ = true

[connection signal="clicker_spawned" from="." to="UI/UpgradeUi" method="_on_clicker_spawned"]
[connection signal="clicked" from="Homunculus" to="UI/RessourceUi" method="_on_homunculus_clicked"]
[connection signal="phase_switch" from="Homunculus" to="UI/UpgradeUi" method="_on_phase_switch"]
[connection signal="timeout" from="ClickerTimer" to="ClickerTimer" method="_on_timeout"]
[connection signal="essence_update" from="UI/RessourceUi" to="Homunculus" method="_on_ressource_ui_essence_update"]
[connection signal="spawn_candle" from="UI/UpgradeUi" to="." method="_on_spawn_candle"]
[connection signal="spawn_clicker" from="UI/UpgradeUi" to="." method="_on_spawn_clicker"]
[connection signal="spawn_clicker" from="UI/UpgradeUi" to="ClickerTimer" method="_on_clicker_spawn"]
[connection signal="spawn_tentacle" from="UI/UpgradeUi" to="." method="_on_spawn_tentacle"]
[connection signal="update_essence" from="UI/UpgradeUi" to="UI/RessourceUi" method="update_essence"]
[connection signal="upgrade_clicker" from="UI/UpgradeUi" to="ClickerTimer" method="_on_upgrade_clicker"]
